server/ans.txt
Output.java:1: error: class Outt is public, should be declared in a file named Outt.java
public class Outt {
       ^
1 error
